// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> renders different button types 1`] = `
.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  padding: 4px 0;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
  padding: 4px 0;
  gap: 10px;
}

.c15 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 12px;
}

.c10 {
  color: #FFFFFF;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c12 {
  color: #9B9B9B;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #FFFFFF;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c7:hover {
  opacity: 0.6;
}

.c7:active {
  opacity: 0.4;
}

.c19 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF12;
  border-radius: 16px;
  border: 0;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 14px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 16px;
  padding: 8px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16:active .c18 {
  background-color: #B8C0DC3d;
}

.c16:focus .c18 {
  background-color: #B8C0DC3d;
}

.c16:hover .c18 {
  background-color: #1B1B1B14;
}

.c16:disabled {
  cursor: default;
  opacity: 0.6;
}

.c16:disabled:active .c18,
.c16:disabled:focus .c18,
.c16:disabled:hover .c18 {
  background-color: transparent;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FF5F52;
  border-radius: 16px;
  border: 0;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 14px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 16px;
  padding: 8px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c20:active .c18 {
  background-color: #B8C0DC3d;
}

.c20:focus .c18 {
  background-color: #B8C0DC3d;
}

.c20:hover .c18 {
  background-color: #1B1B1B14;
}

.c20:disabled {
  cursor: default;
  opacity: 0.6;
}

.c20:disabled:active .c18,
.c20:disabled:focus .c18,
.c20:disabled:hover .c18 {
  background-color: transparent;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c3 {
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  will-change: transform,opacity;
}

.c0[data-reach-dialog-overlay] {
  z-index: 1040;
  background-color: transparent;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.60);
}

.c1 {
  overflow-y: auto;
}

.c1[data-reach-dialog-content] {
  margin: auto;
  background-color: #1B1B1B;
  border: 1px solid #FFFFFF12;
  box-shadow: 12px 16px 24px rgba(0,0,0,0.24),12px 8px 12px rgba(0,0,0,0.24),4px 4px 8px rgba(0,0,0,0.32);
  padding: 0;
  width: 50vw;
  overflow-y: auto;
  overflow-x: hidden;
  max-width: 700px;
  max-height: 90vh;
  display: inline-table;
  border-radius: 20px;
}

.c4 {
  background-color: #131313;
  outline: 1px solid #FFFFFF12;
  border-radius: 20px;
  padding: 16px 24px 24px 24px;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF12;
  width: 48px;
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
}

.c11 {
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  font-weight: 500;
}

.c13 {
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 40px;
  border-radius: 12px;
}

@media screen and (max-width:640px) {
  .c0[data-reach-dialog-overlay] {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media screen and (max-width:768px) {
  .c1[data-reach-dialog-content] {
    width: 65vw;
  }
}

@media screen and (max-width:640px) {
  .c1[data-reach-dialog-content] {
    margin: 0;
    width: 100vw;
    border-radius: 20px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

<body
  data-scroll-locked=""
>
  <div
    aria-hidden="true"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_dark _dsp_contents is_Theme"
      />
    </span>
  </div>
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="c0"
          data-reach-dialog-overlay=""
          style="opacity: 0;"
        >
          <div
            aria-label="dialog"
            aria-modal="true"
            class="c1"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <div
              class="c2 c3 c4"
            >
              <div
                class="c5 c6"
                width="100%"
              >
                <svg
                  class="c7"
                  data-testid="Dialog-closeButton"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </div>
              <div
                class="c8 c3"
              >
                <div
                  class="c9"
                >
                  <div>
                    Mock Icon
                  </div>
                </div>
                <div
                  class="c10 c11 css-4kpdx7"
                >
                  <div>
                    Mock Title
                  </div>
                </div>
                <div
                  class="c12 c13 css-1urox24"
                >
                  <div>
                    Mock Description
                  </div>
                </div>
                <div>
                  Mock Body
                </div>
              </div>
              <div
                class="c14 c15"
              >
                <button
                  class="c16 c17"
                  disabled=""
                >
                  <div
                    class="c18 c19"
                  />
                  <div>
                    Left Button
                  </div>
                </button>
                <button
                  class="c20 c17"
                >
                  <div
                    class="c18 c19"
                  />
                  <div>
                    Right Button
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`<Dialog /> renders the Dialog component correctly 1`] = `
.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  padding: 4px 0;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
  padding: 4px 0;
  gap: 10px;
}

.c15 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 12px;
}

.c10 {
  color: #FFFFFF;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c12 {
  color: #9B9B9B;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #FFFFFF;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c7:hover {
  opacity: 0.6;
}

.c7:active {
  opacity: 0.4;
}

.c19 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF12;
  border-radius: 16px;
  border: 0;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 14px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 16px;
  padding: 8px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16:active .c18 {
  background-color: #B8C0DC3d;
}

.c16:focus .c18 {
  background-color: #B8C0DC3d;
}

.c16:hover .c18 {
  background-color: #1B1B1B14;
}

.c16:disabled {
  cursor: default;
  opacity: 0.6;
}

.c16:disabled:active .c18,
.c16:disabled:focus .c18,
.c16:disabled:hover .c18 {
  background-color: transparent;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c3 {
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  will-change: transform,opacity;
}

.c0[data-reach-dialog-overlay] {
  z-index: 1040;
  background-color: transparent;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.60);
}

.c1 {
  overflow-y: auto;
}

.c1[data-reach-dialog-content] {
  margin: auto;
  background-color: #1B1B1B;
  border: 1px solid #FFFFFF12;
  box-shadow: 12px 16px 24px rgba(0,0,0,0.24),12px 8px 12px rgba(0,0,0,0.24),4px 4px 8px rgba(0,0,0,0.32);
  padding: 0;
  width: 50vw;
  overflow-y: auto;
  overflow-x: hidden;
  max-width: 700px;
  max-height: 90vh;
  display: inline-table;
  border-radius: 20px;
}

.c4 {
  background-color: #131313;
  outline: 1px solid #FFFFFF12;
  border-radius: 20px;
  padding: 16px 24px 24px 24px;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF12;
  width: 48px;
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
}

.c11 {
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  font-weight: 500;
}

.c13 {
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 40px;
  border-radius: 12px;
}

@media screen and (max-width:640px) {
  .c0[data-reach-dialog-overlay] {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media screen and (max-width:768px) {
  .c1[data-reach-dialog-content] {
    width: 65vw;
  }
}

@media screen and (max-width:640px) {
  .c1[data-reach-dialog-content] {
    margin: 0;
    width: 100vw;
    border-radius: 20px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

<body
  data-scroll-locked=""
>
  <div
    aria-hidden="true"
  >
    <span
      class="t_dark is_inversed _dsp_contents"
    >
      <span
        class=" t_dark _dsp_contents is_Theme"
      />
    </span>
  </div>
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="c0"
          data-reach-dialog-overlay=""
          style="opacity: 0;"
        >
          <div
            aria-label="dialog"
            aria-modal="true"
            class="c1"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <div
              class="c2 c3 c4"
            >
              <div
                class="c5 c6"
                width="100%"
              >
                <svg
                  class="c7"
                  data-testid="Dialog-closeButton"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </div>
              <div
                class="c8 c3"
              >
                <div
                  class="c9"
                >
                  <div>
                    Mock Icon
                  </div>
                </div>
                <div
                  class="c10 c11 css-4kpdx7"
                >
                  <div>
                    Mock Title
                  </div>
                </div>
                <div
                  class="c12 c13 css-1urox24"
                >
                  <div>
                    Mock Description
                  </div>
                </div>
                <div>
                  Mock Body
                </div>
              </div>
              <div
                class="c14 c15"
              >
                <button
                  class="c16 c17"
                >
                  <div
                    class="c18 c19"
                  />
                  <div>
                    Left Button
                  </div>
                </button>
                <button
                  class="c16 c17"
                >
                  <div
                    class="c18 c19"
                  />
                  <div>
                    Right Button
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;
